[package]
name = "tetris-tui-vanilla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = {version = "0.26.1", features = ["event-stream"]}
tokio = {version = "1.32", features = ["full"]}
futures = "0.3.28"
futures-timer = "3.0.2"
